--- a/OpenVisionCpp/OpenVisionCpp.vcxproj
+++ b/OpenVisionCpp/OpenVisionCpp.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{42A1CA4C-229F-4250-A233-1EF177DC070B}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>OpenVisionCpp</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -90,13 +90,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Danilo\opencv-2.4.3\opencv\build\include;C:\Users\Danilo\opencv-2.4.3\opencv\build\include\opencv;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\opencv\build\include;C:\opencv\build\include\opencv2;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\Danilo\opencv-2.4.3\opencv\build\x86\vc11\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opencv_calib3d2413.lib;opencv_calib3d2413d.lib;opencv_contrib2413.lib;opencv_contrib2413d.lib;opencv_core2413.lib;opencv_core2413d.lib;opencv_features2d2413.lib;opencv_features2d2413d.lib;opencv_flann2413.lib;opencv_flann2413d.lib;opencv_gpu2413.lib;opencv_gpu2413d.lib;opencv_highgui2413.lib;opencv_highgui2413d.lib;opencv_imgproc2413.lib;opencv_imgproc2413d.lib;opencv_legacy2413.lib;opencv_legacy2413d.lib;opencv_ml2413.lib;opencv_ml2413d.lib;opencv_nonfree2413.lib;opencv_nonfree2413d.lib;opencv_objdetect2413.lib;opencv_objdetect2413d.lib;opencv_ocl2413.lib;opencv_ocl2413d.lib;opencv_photo2413.lib;opencv_photo2413d.lib;opencv_stitching2413.lib;opencv_stitching2413d.lib;opencv_superres2413.lib;opencv_superres2413d.lib;opencv_ts2413.lib;opencv_ts2413d.lib;opencv_video2413.lib;opencv_video2413d.lib;opencv_videostab2413.lib;opencv_videostab2413d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\opencv\build\x64\vc15\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opencv_world410.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -107,10 +107,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\opencv\build\include;C:\opencv\build\include\opencv2;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>opencv_world410.lib;opencv_world410d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\opencv\build\x64\vc15\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -163,24 +166,20 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\..\..\..\opencv-2.4.3\opencv\build\x86\vc11\bin\opencv_contrib2413.dll">
+    <Content Include="..\..\..\..\..\..\opencv\build\x64\vc15\bin\opencv_world410.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\..\..\..\opencv-2.4.3\opencv\build\x86\vc11\bin\opencv_core2413.dll">
+	<Content Include="..\..\..\..\..\..\opencv\build\x64\vc15\bin\opencv_world410d.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-	<Content Include="..\..\..\..\opencv-2.4.3\opencv\build\x86\vc11\bin\opencv_highgui2413.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\..\..\..\opencv-2.4.3\opencv\build\x86\vc11\bin\opencv_imgproc2413.dll">
+	<Content Include="..\..\..\..\..\..\opencv\build\x64\vc15\bin\opencv_ffmpeg410_64.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\..\..\opencv-2.4.3\opencv\build\x86\vc11\bin\opencv_contrib2413.dll" />
-    <None Include="..\..\..\..\opencv-2.4.3\opencv\build\x86\vc11\bin\opencv_core2413.dll" />
-    <None Include="..\..\..\..\opencv-2.4.3\opencv\build\x86\vc11\bin\opencv_highgui2413.dll" />
-    <None Include="..\..\..\..\opencv-2.4.3\opencv\build\x86\vc11\bin\opencv_imgproc2413.dll" />
+    <None Include="..\..\..\..\..\..\opencv\build\x64\vc15\bin\opencv_world410.dll" />
+	<None Include="..\..\..\..\..\..\opencv\build\x64\vc15\bin\opencv_world410d.dll" />
+	<None Include="..\..\..\..\..\..\opencv\build\x64\vc15\bin\opencv_ffmpeg410_64.dll" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
